language/move-lang/tests/move_check/parser/extra_text_after_main.exp
error: 

   ┌── tests/move_check/parser/extra_text_after_main.move:5:1 ───
   │
 5 │ foo() {
   │ ^^^ Unexpected characters after end of main function
   │

